# testsmells.llms.study-replication.package-ICSE26

./: .gitignore  README.md  pyproject.toml
coverage_tool/_dataTreatment/: change_approach.py  chart_generate.py  data_treatment.py  extract_data_from_html.py  get_difference.py  get_final_results.py
coverage_tool/_dataTreatment/models/: curingas.py  run_jacoco.py  run_pytest.py
coverage_tool/modules/cli/: full_pipeline.py  generate_reports.py  process_main.py
coverage_tool/modules/extractors/: coverage_extractors.py  java_extractor.py  python_extractor.py
coverage_tool/modules/processors/: compare.py  original_processor.py  summarizer.py
coverage_tool/utils/: analysis_utils.py  utils.py
dataset/: dataset_used_coverage_report.xlsx
dataset/instructions/java/achilles/: run_jacoco.py
dataset/instructions/java/aismessages/: run_jacoco.py
dataset/instructions/java/commons-io/: run_jacoco.py
dataset/instructions/java/dropwizard/: run_jacoco.py
dataset/instructions/java/elastic-job-lite/: run_jacoco.py
dataset/instructions/java/jfree/: run_jacoco.py
dataset/instructions/java/jimfs/: run_jacoco.py
dataset/instructions/java/junit-quickcheck/: run_jacoco.py
dataset/instructions/java/marine-api/: run_jacoco.py
dataset/instructions/java/pippo/: run_jacoco.py
dataset/instructions/java/redpipe/: run_jacoco.py
results/final_refactoring/correlations_between_smells_removed/: correlation_matrix_smells.xlsx
results/final_refactoring/proportional_impact_on_test_smells/: matrix_pct_removed_a.xlsx
src/: README.md
(+3491 files in other folders)
