[tool.poetry]
name = "testsmells-llms-study-replication-package-icse26"
version = "0.1.0"
description = ""
authors = ["janderjr15 <jandersantos@ufba.br>"]
readme = "README.md"
packages = [{include = "testsmells"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
